Fix registration mobile

--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-/*:root {
---main-color: #f7931d;
---text-color: #4c4c4c;
---white: #fffff;
-}*/
-
 * {
   box-sizing: border-box;
 }
@@ -421,8 +415,17 @@ nav ul li:hover {
   transform:  rotate(-2deg) scale(1) skew(0) translate(0px);
 }
 
-.registration-section p,
-.registration-section .typeform-widget {
+.registration-section h2 {
+  margin: 0;
+}
+
+.registration-section a {
+  color: white;
+}
+
+.registration-section .registration-small,
+.registration-section .typeform-widget,
+.registration-section .registration-small {
   text-rendering: optimizeLegibility;
   transform: rotate(2deg) scale(1) skew(0) translate(0px);
 }
@@ -562,10 +565,18 @@ footer a:visited {
   .silver img {
     max-width: 150px;
   }
+
+  .typeform-widget {
+    display: none;
+  }
 }
 
 @media (min-width: 900px) {
   #video-section img {
+    display: none;
+  }
+
+  .registration-small {
     display: none;
   }
 }
